# synapsedb

./: Cargo.toml  README.md
src/: io.rs  main.rs
