[package]
name = "synapsedb"
version = "0.1.0"
authors = ["Daniel Alexander Apatiga <daniel.apatiga@pickupfit.com>"]
edition = "2018"

[dependencies]
config = "0.10.1"
string-builder = "0.2.0"
md5="0.7.0"
rand_pcg="0.2.1"
rand_core="0.5.1"
actix-rt = "1.1.1"
actix-form-data = "0.4.0"
actix-multipart = "0.2.0"
actix="0.9.0"
actix-tls="1.0.0"
#ipconfig ="0.2.2"
openssl = { version = "0.10.11", features = ["v110"] }
#uuid = { version = "0.8.1", features = ["serde", "v4"] }

[dependencies.derive_more]
version = "0.99.9"
default-features = false
features = ["as_mut"]

[dependencies.actix-web]
version = "2.0.0"
features = ["compress", "openssl"]
# add feature "openssl" above when ready...

[dependencies.serde]
version = "1.0.114"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.57"

[dependencies.futures]
version = "0.3"
features = ["thread-pool"]


#[dependencies.chrono]
#version = "0.4.13"
#features = ["serde"]